[package]
name = "sent_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1"
unicode-segmentation = "^1"
csv = "1.1"
serde = { version = "^1", features = ["derive"] }
stop-words = "0.7.2"
rustc-hash = "1.1.0"
